@@ -1,3 +1,7 @@
+Changes in version: randomNames_0.0-5
+
+  o Fixed key to accomodate changes in data.table 1.7.8.
+
 Changes in version: randomNames_0.0-4
 
   o Added NAMESPACE.
